--- a/PureJava/org.eclipse.nebula.visualization.xygraph/src/org/eclipse/nebula/visualization/xygraph/messages.properties
+++ b/PureJava/org.eclipse.nebula.visualization.xygraph/src/org/eclipse/nebula/visualization/xygraph/messages.properties
@@ -33,8 +33,12 @@ PointSquare=Square
 PointTriangle=Triangle
 ProintCross2=Cross(+)
 TraceArea=Area
+TraceLineArea=Line Area
 TraceBar=Bar
 TraceDash=Dash Line
+TraceDashDot=Dash Dot Line
+TraceDashDotDot=Dash Dot Dot Line
+TraceDot=Dot Line
 TracePoint=Point
 TraceSolid=Solid Line
 TraceStepHoriz=Step Horizontally
