Bug 463431 - Add DYNAMIC_ZOOM as new zoomType
Dynamic zoomType is added that will combine 3 zoom
types(RUBBERBAND_ZOOM, HORIZONTAL_ZOOM and VERTICAL_ZOOM). If current x
Value is very near start x Value zoom will be vertical, if y value will
be very near start y Value zoom will be horizontal, otherwise zoom is
RUBBERBAND zoom type.

Comments to code review questions:

Patch is finished and you
could merge it to master branch if not already merged, thanks

I only changed comments to understand for what is dynamicStart used, I
don't need image for new zoom because it is combination of 3 zooms so
don't want to complicate zoom with new image, thanks for checking

Finally reset all changes and put all them again, double checked with
compare function, now should work!

Default code formatter is now used.

Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=463431
Change-Id: I9125413fb935a7aea308a96f64421a42720a745a
Signed-off-by: Sansovic Domjan <domjan.sansovic@infineon.com>

--- a/PureJava/org.eclipse.nebula.visualization.xygraph/src/org/eclipse/nebula/visualization/xygraph/messages.properties
+++ b/PureJava/org.eclipse.nebula.visualization.xygraph/src/org/eclipse/nebula/visualization/xygraph/messages.properties
@@ -53,4 +53,5 @@ Zoom_OutHoriz=Zoom Out Horizontally
 Zoom_OutVert=Zoom Out Vertically
 Zoom_Pan=Panning
 Zoom_Rubberband=Rubberband Zoom
+Zoom_Dynamic=Dynamic Zoom
 Zoom_Vert=Vertical Zoom
